--- a/library.properties
+++ b/library.properties
@@ -2,7 +2,8 @@ name=SerialCommands
 version=1.1
 author=Pedro Tiago Pereira <tiago.private@gmail.com>
 maintainer=Pedro Tiago Pereira <tiago.private@gmail.com>
-sentence=A simple and most powerfull cmd parser with small memory footprint
+sentence=An Arduino library to tokenize and parse commands received over a serial port. 
+paragraph=Simple, small footprint, no dynamic memory allocation
 category=Data Processing
 url=https://github.com/ppedro74/Arduino-SerialCommands
 architectures=*
